# BlackSwanClassifier

./: README.md  __init__.py  algorithmeai.py  pyproject.toml
quickstart/: backtest.csv  blackswan-api.json  quickstart.ipynb  train.csv
